# pptx-to-premium-html

./: .gitignore  GEMINI.md  README.md  download_libs.py  extracted_methods.py  main.py  patch_html_generator.py  pptx_to_html.py  pyproject.toml
scratch/: compare_heads.py  count_slides.py
src/: config.py  style.py
src/converters/: html_generator.py  math_converter.py  table_converter.py
src/core/: ai_processor.py  cache.py  parser.py
src/utils/: image_helpers.py  layout_engine.py  llm_cache.py  resource_helpers.py  text_helpers.py
tests/: test_core.py
Промежуточная/: [Content_Types].xml
Промежуточная/docProps/: app.xml  core.xml
Промежуточная/ppt/: presProps.xml  presentation.xml  tableStyles.xml  viewProps.xml
Промежуточная/ppt/_rels/: presentation.xml.rels
Промежуточная/ppt/fonts/: font1.fntdata  font2.fntdata  font3.fntdata  font4.fntdata  font5.fntdata  font6.fntdata  font7.fntdata  font8.fntdata  font9.fntdata
Промежуточная/ppt/notesMasters/: notesMaster1.xml
Промежуточная/ppt/notesSlides/: notesSlide1.xml  notesSlide2.xml
Промежуточная/ppt/slideLayouts/: slideLayout1.xml  slideLayout10.xml  slideLayout11.xml  slideLayout2.xml  slideLayout3.xml  slideLayout4.xml  slideLayout5.xml  slideLayout6.xml  slideLayout7.xml  slideLayout8.xml  slideLayout9.xml
Промежуточная/ppt/slideMasters/: slideMaster1.xml
Промежуточная/ppt/slides/: slide1.xml  slide10.xml  slide11.xml  slide12.xml  slide13.xml  slide14.xml  slide15.xml  slide16.xml  slide17.xml  slide18.xml  slide19.xml  slide2.xml  slide20.xml  slide21.xml  slide22.xml  slide23.xml  (+26 more)
(+34 files in other folders)
